@startuml
'https://plantuml.com/class-diagram

Command <|-- ClearCommand
Command -> CommandResult
ClearCommand -> CommandResult
ClearCommand --> FoodList : clears
FoodList -> Food

hide circle
skinparam classAttributeIconSize 0

abstract class Command{
    +execute(): CommandResult
}

class ClearCommand {
    +execute(foodList: FoodList): CommandResult
}

class CommandResult {
    -feedbackToUser: String
    +printResult(): void
}

class FoodList {
    -foodList: ArrayList<Food>
    +clearFoodList(): void
    +removeFood(index: int): void
}


class Food{
    - name: String
    - expiryDate: String
    - quantity: Double

    + toString(): String
}

@enduml